# devman-notification-bot

./: .env(example)  Dockerfile  Makefile  Procfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml
bot/: bot_logging.py  logs_handler.py  main.py
