[tool.poetry]
name = "devman-notification-bot"
version = "0.1.0"
description = "Bot for sending telegram notifications about Devman lessons checking"
authors = ["Artem Nechai <lenikol95@mail.ru>"]
packages = [
  { include = "bot" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
python-telegram-bot = "^13.11"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
isort = "^5.10.1"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
